fix scrollbar and update content

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,6 +16,7 @@
 html {
   font-size: 16px;
   line-height: 1;
+  overflow-y: scroll;
 }
 
 body {
